--- a/Music/app/views/artists/edit.html.erb
+++ b/Music/app/views/artists/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Artists#edit</h1>
-<p>Find me in app/views/artists/edit.html.erb</p>
+<h1>Edit <%= @artist.name %></h1>
+
+<%= form_tag "/artists/#{@artist.id}", method: :put do %>
+<%= label_tag :name, "Artist Name:" %>
+<%= text_field_tag :name, "Enter the stupid name" %>
+<%= label_tag :band_id, "Band ID" %>
+<%= text_field_tag :band_id, "memorize the stupid band number" %>
+<%= submit_tag "Update Artist" %>
+<% end %>
+
