--- a/Music/app/views/artists/index.html.erb
+++ b/Music/app/views/artists/index.html.erb
@@ -5,6 +5,7 @@
     <li>
       <%= link_to format_link_title(artist), artist_path(artist) %>
       <%= link_to "Edit", edit_artist_path(artist) %>
+      <%= link_to "Destroy!", artist_path(artist), method: :delete %>
     </li>
   <% end %>
 </ul>
