--- a/Music/app/views/artists/new.html.erb
+++ b/Music/app/views/artists/new.html.erb
@@ -1,14 +1,4 @@
 <h1>Add an Artist</h1>
 <%= form_tag("/artists", method: :post) do %>
-  <p>
-    <%= label_tag :name, "Artist Name: " %>
-    <%= text_field_tag :name %>
-  </p>
-  <p>
-    <%= label_tag :band_id, "Band ID: " %>
-    <%= text_field_tag :band_id %>
-  </p>
-  <p>
-    <%= submit_tag "Create Artist" %>
-  </p>
+<%= render :partial => "form" %>
 <% end %>
