--- a/Music/app/views/bands/_form.html.erb
+++ b/Music/app/views/bands/_form.html.erb
@@ -1,3 +1,3 @@
 <%= label_tag :name, "Band Name" %>
-<%= text_field_tag :name %>
+<%= text_field_tag :name, @band.name %>
 <%= button_tag "A little text" %>
