--- a/Music/app/views/bands/edit.html.erb
+++ b/Music/app/views/bands/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Edit Band ;)</h1>
 
-<%= render :partial => 'form' %>
+<%= form_tag(band_path, method: :put) do %>
+  <%= render :partial => 'form' %>
+<% end %>
