--- a/Music/app/views/bands/_form.html.erb
+++ b/Music/app/views/bands/_form.html.erb
@@ -1,3 +1,6 @@
-<%= label_tag :name, "Band Name" %>
-<%= text_field_tag :name, @band.name %>
-<%= button_tag "A little text" %>
+<%= form_for @band do |f| %>
+  <%= f.label :name, "Band Name" %>
+  <%= f.text_field :name %>
+  <%= f.file_field :picture %>
+  <%= f.button "A little text" %>
+<% end %>
